Add support for yt-dlp as a fallback in the YoutubeDl encoder